@@ -2,7 +2,8 @@
 * enhancements
   * An endpoint can now "call" JavaScript functions that accept multiple parameters, by specifying an array, e.g.:
       {:some_js_function => [arg1, arg2]}
-	* New API: +js_mixin+ method (see RDocs)
+  * New API: +js_mixin+ method (see RDocs)
+  * Set JS class property +load_mask_msg+ if you want to see a mask when a component gets dynamically loaded with +loadComponent+
 
 * bug fix
   * The "componentload" event now gets fired after a component is dynamically loaded. The handler receives the instance of the loaded component.
